<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/newtwork_required" />

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/noNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none_network_option"
            android:checked="true"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/anyNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any_network_option"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_network_option"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requires"
        android:layout_margin="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/idleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_idle"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/chargingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_charging"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:id="@+id/seekBarProgress"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_job"
        android:onClick="scheduleJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_jobs"
        android:onClick="cancelJobs"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        />
</LinearLayout>